--- a/assets/sass/style.scss
+++ b/assets/sass/style.scss
@@ -27,7 +27,7 @@
 
     .subtitle{
         text-align: center;
-        color: white;
+        color: rgb(185, 185, 185);
         font-size:20px;
         // width: 50%;
         margin-top: 20px;
